<resources>
    <string name="app_name">Ejercicios y salud</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Ejercicios y Salud</string>
    <string name="nav_header_subtitle">¡Haz ejercicio y mantente saludable!</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <!-- 000  Nav menu strings -->
    <string name="menu_plan">Mi plan</string>
    <string name="menu_inform">Informe</string>
    <string name="menu_user_perfil">Perfil</string>
    <string name="menu_change_plan">Cambiar plan</string>
    <string name="menu_restore_plan">Reiniciar  plan</string>
    <!-- 000 Perfil fragment strings -->
    <string name="perfil_title_estado_fisico">Condición fisica</string>
    <string name="perfil_altura">Altura</string>
    <string name="perfil_peso">Peso</string>
    <string name="perfil_hint_altura">180.00 cm</string>
    <string name="perfil_hint_peso">70.00 Kg</string>
    <string name="perfil_button_guardar">Guardar</string>

    <string name="perfil_title_recordatorio">Recordatorio</string>
    <string name="perfil_hora">Hora</string>
    <string name="perfil_hint_hora">00:00 HH:mm</string>
    <string name="perfil_hora_establecer">ESTABLECER</string>

    <string name="perfil_title_plan">Configuración de plan</string>
    <string name="perfil_dificulta">Dificultad</string>
    <string name="perfil_grupo_muscular">Grupo muscular</string>

    <!-- 000 Plan fragment strings -->
    <string name="informe_title_Historial">Historial</string>
    <string name="informe_plan">Plan</string>
    <string name="ejercicios">Ejercicios</string>
    <string name="informe_total_dias">Dias</string>
    <string name="informe_altura">Altura</string>
    <string name="informe_peso">Peso</string>
    <string name="informe_calorias">Kcal</string>
    <string name="informe_imc">IMC</string>

    <!-- RecyclerView plan dia -->
    <string name="plan_dia">Dia</string>
    <string name="plan_iniciar_rutina">Iniciar</string>

    <!-- RecyclerView rutina de ejercicios -->

    <string name="ejer_name">Ejercicio</string>
    <string name="ejer_indicaciones">Indicaciones</string>

    <!-- RecyclerView informe -->

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>